# meson

mesonbuild/backend/: ninjabackend.py
mesonbuild/modules/: gnome.py
test cases/vala/12 generated vapi/: meson.build
test cases/vala/13 find library/: meson.build
test cases/vala/15 type module/: foo.vala  meson.build  plugin-loader.vala
test cases/vala/9 gir/: meson.build
